Set up maven tycho infrastructure
Also rename some more.

--- a/bundles/org.palladiosimulator.retriever.services/plugin.xml
+++ b/bundles/org.palladiosimulator.retriever.services/plugin.xml
@@ -4,10 +4,10 @@
 	<extension-point id="org.palladiosimulator.retriever.services.discoverer"
 		name="Retriever Discoverer"
 		schema="schema/org.palladiosimulator.retriever.services.discoverer.exsd" />
-	<extension-point id="org.palladiosimulator.retriever.extraction.rule"
+	<extension-point id="org.palladiosimulator.retriever.services.rule"
 		name="Retriever Rule"
-		schema="schema/org.palladiosimulator.retriever.extraction.rule.exsd" />
-	<extension-point id="org.palladiosimulator.retriever.extraction.analyst"
+		schema="schema/org.palladiosimulator.retriever.services.rule.exsd" />
+	<extension-point id="org.palladiosimulator.retriever.services.analyst"
 		name="Retriever Analyst"
-		schema="schema/org.palladiosimulator.retriever.extraction.analyst.exsd" />
+		schema="schema/org.palladiosimulator.retriever.services.analyst.exsd" />
 </plugin>
