--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
 
 	<properties>
 		<org.palladiosimulator.maven.tychotprefresh.tplocation.2>
-			${project.basedir}/releng/org.palladiosimulator.retriever.services.targetplatform/org.palladiosimulator.retriever.services.target</org.palladiosimulator.maven.tychotprefresh.tplocation.2>
+			${project.basedir}/releng/org.palladiosimulator.retriever.services.targetplatform/org.palladiosimulator.retriever.services.targetplatform.target</org.palladiosimulator.maven.tychotprefresh.tplocation.2>
 	</properties>
 
 	<modules>
-		<module>releng</module>
+        <module>releng</module>
 		<module>bundles</module>
 		<module>features</module>
 	</modules>
