--- a/releng/org.palladiosimulator.retriever.services.updatesite/.project
+++ b/releng/org.palladiosimulator.retriever.services.updatesite/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.palladiosimulator.retriever.vulnerability.updatesite</name>
+	<name>org.palladiosimulator.retriever.services.updatesite</name>
 	<comment></comment>
 	<projects>
 	</projects>
