--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.palladiosimulator</groupId>
 		<artifactId>eclipse-parent-updatesite</artifactId>
-		<version>0.9.0</version>
+		<version>0.10.0</version>
 	</parent>
 
 	<groupId>org.palladiosimulator.retriever.services</groupId>
@@ -18,8 +18,7 @@
 
 
 	<properties>
-		<org.palladiosimulator.maven.tychotprefresh.tplocation.2>
-			${project.basedir}/releng/org.palladiosimulator.retriever.services.targetplatform/org.palladiosimulator.retriever.services.targetplatform.target</org.palladiosimulator.maven.tychotprefresh.tplocation.2>
+		<targetPlatform.relativePath>releng/org.palladiosimulator.retriever.services.targetplatform/tp.target</targetPlatform.relativePath>
 	</properties>
 
 	<modules>
